--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@ The webpack dev server should serve this up on localhost:8080. Yes?-->
 <body>
   <div id="root"></div>
 </body>
-<script>console.log('HTML loaded')</script>
-<script src="./react-index.js">console.log('Attempting to load JS')</script>
+<script>console.log('HTML loaded. Attempting to load JS.')</script>
+<script src="./react-index.js" type="module"></script>
 </html>
 
