--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,6 @@ The webpack dev server should serve this up on localhost:8080. Yes?-->
   <div id="root"></div>
 </body>
 <script>console.log('HTML loaded')</script>
-<script src="./react-index.js">console.log('Attempting to load JS')</script>
+<script src="./bundle-index.js" type="module">console.log('Attempting to load JS')</script>
 </html>
 
